# rust-graphql

./: .env  Cargo.toml  design.md  example_getby_id.graphql  example_mutation copy.graphql  notes.md  plan.md
src/: main.rs  postgres_introspect.rs
