[package]
edition = "2021"
name = "rust-graphql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-parser = "0.2.5"
async-graphql = "3.0"
async-graphql-actix-web = "3.0"
dotenv = "0.15.0"
futures = {version = "0.3.5"}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "postgres"]}
tokio = {version = "1", features = ["full"]}
uuid = {version = "1.0.0", features = ["v4", "fast-rng"]}
itertools = "0.10.3"
sqlformat = "0.2.0"
dockertest = "0.3.0"
testcontainers = "0.13.0"
derivative = "2.2.0"
regex = "1"


[toolchain]
channel = "nightly"
