[package]
edition = "2021"
name = "rust-graphql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = {version = "0.3.5"}
serde_json = "1.0"
futures-util = "0.3"
uuid = {version = "1.0.0", features = ["v4", "fast-rng"]}
sqlx = {version = "0.5.13", features = ["runtime-tokio-native-tls", "postgres", "uuid"]}
tokio = {version = "1", features = ["full"]}
itertools = "0.10.3"
sqlformat = "0.2.0"
dockertest = "0.3.0"
testcontainers = "0.13.0"
derivative = "2.2.0"
regex = "1"
graphql-parser = "0.4.0"
num-traits = "0.2.15"

[toolchain]
channel = "nightly"
